<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.sendmedia.opiummks.MainActivity" >

    <item
        android:id="@+id/akun"
        android:orderInCategory="100"
        android:title="@string/akun"
        app:showAsAction="never"/>
    <item
        android:id="@+id/artikel"
        android:orderInCategory="200"
        android:title="@string/artikel"
        app:showAsAction="never"/>
    <item
        android:id="@+id/bantuan"
        android:orderInCategory="300"
        android:title="@string/bantuan"
        app:showAsAction="never"/>
    <item
        android:id="@+id/tentang"
        android:orderInCategory="400"
        android:title="@string/tentang"
        app:showAsAction="never"/>
    <item
        android:id="@+id/keluar"
        android:orderInCategory="500"
        android:title="@string/keluar"
        app:showAsAction="never"/>
</menu>